# ECMA-SL

./: .gitattributes  .gitignore  .gitmodules  .ocamlformat  CHANGES.md  CONTRIBUTING.md  README.md  SETUP.md  dune-project  ecma-sl-share.opam  ecma-sl.opam  ecma-sl.opam.template  js2ecma-sl.opam  temp
ECMA-SL/: ECMA_SL.opam  ECMA_SL.opam.template  README.md  _tags  config.ml  dune  dune-project  ecma-sl.opam  ecma_sl.ml  ecmasl.itarget  es.opam  js2ecmasl.ml  share.ml
ECMA-SL/base/: cont.ml  dune  fmt.ml  font.ml  io.ml  log.ml  string.ml  terminal.ml
ECMA-SL/base/error/: error_type.ml  internal_error.ml
ECMA-SL/base/utils/: base.ml  fmt.ml  font.ml  log.ml  string.ml  syntax.ml  terminal.ml
ECMA-SL/core/: dune
ECMA-SL/core/error/: error_type.ml
ECMA-SL/core/utils/: base.ml
ECMA-SL/error/: compile_error.ml  error_source.ml  error_trace.ml  eslerr.ml  eslerr_comp.ml  eslerr_fmt.ml  eslerr_msgs.ml  eslerr_token.ml  eslerr_type.ml  runtime_error.ml  typing_error.ml
ECMA-SL/functorial/: args_typing_binop.ml  choice_monad.ml  choice_monad_intf.ml  extern_func.ml  interpreter_functor.ml  interpreter_functor_intf.ml  link_env.ml  memory_intf.ml  object_intf.ml  symbolic.ml  symbolic_extern.ml  symbolic_memory.ml  symbolic_object.ml  symbolic_value.ml  value_intf.ml  value_reducer.ml  value_translator.ml  value_typing.ml
ECMA-SL/lib/: config.ml  dune  flags.ml
ECMA-SL/lib/solver/: encode_binop.ml  encode_unop.ml  encoding.ml  encoding.mli  encoding2.ml
ECMA-SL/lib/symbolic/: args_typing_binop.ml  choice_monad.ml  choice_monad_intf.ml  eval.ml  eval.mli  eval_functor.ml  eval_functor_intf.ml  extern_func.ml  link_env.ml  report.ml  report.mli  sym_heap.ml  sym_heap2.ml  sym_heap_intf.ml  sym_heap_obj_list.ml  sym_object_list.ml  sym_state.ml  sym_value.ml  symbolic_interpreter.ml  value_intf.ml  value_reducer.ml  value_translator.ml
ECMA-SL/lib/typed/: T_Checker.ml  T_Constraint.ml  T_Ctx.ml  T_Err.ml  T_ErrFmt.ml  T_Expr.ml  T_Narrowing.ml  T_Op.ml  T_Pattern.ml  T_Res.ml  T_Stmt.ml  T_Typing.ml
ECMA-SL/lib/utils/: Date_Utils.ml  Parse_Heap.ml  common.ml  counter.ml  font.ml  io.ml  io.mli  log.ml  logging.ml  parsing_heap_utils.ml  parsing_number_utils.ml  parsing_utils.ml  string_utils.ml  time_utils.ml
ECMA-SL/main/: main.ml  test_number_parsing_utils.ml
ECMA-SL/semantics/: dune
ECMA-SL/semantics/core/: Core_Interpreter.ml  External.ml  Inspector.ml  debugger.ml  eval_op.ml  eval_operator.ml  external.ml  inspector.ml  interpreter.ml  monitor.ml  verbose.ml
ECMA-SL/semantics/domains/: Heap.ml  call_stack.ml  heap.ml  store.ml
ECMA-SL/semantics/error/: compile_error.ml  error_source.ml  error_trace.ml  error_type.ml  runtime_error.ml  typing_error.ml
ECMA-SL/semantics/extended/: Compiler.ml  E_Func_Metadata.ml  E_Pat_Metadata.ml  HTMLExtensions.ml  HTMLGenerator.ml  HTMLHashtables.ml  HTML_Rules.ml  compiler.ml  preprocessor.ml
ECMA-SL/semantics/utils/: byte_utils.ml  channel_utils.ml  code_utils.ml  date_utils.ml  (+2 more)
ECMA-SL/share/: dune  es.ml  es.mli
ECMA-SL/solver/: encoding.ml
ECMA-SL/src/: cmd_run.ml  cmd_sym.ml  dune
ECMA-SL/symbolic/: args_typing_binop.ml  batch.ml  choice_monad.ml  eval_functor.ml  eval_functor_intf.ml  interpreter_functor.ml  interpreter_functor_intf.ml  link_env.ml  memory_intf.ml  sym_heap.ml  sym_heap2.ml  sym_heap_intf.ml  sym_heap_obj_list.ml  sym_object_list.ml  sym_state.ml  sym_value.ml  symbolic.ml  symbolic_interpreter.ml  symbolic_memory.ml  symbolic_value.ml  value_intf.ml  value_reducer.ml  value_translator.ml  value_typing.ml
ECMA-SL/syntax/: dune
ECMA-SL/test/: dune  test_encoding.ml  test_number_parsing.ml  test_parsing_number.ml  test_s_object.ml  test_symbolic_heap.ml
ECMA-SL/typed/: T_Checker.ml  T_Constraint.ml  T_Ctx.ml  T_Err.ml  T_ErrFmt.ml  T_Expr.ml  T_Narrowing.ml  T_Op.ml  T_Pattern.ml  T_Stmt.ml  T_Typing.ml
ECMA-SL/typing/: T_Checker.ml  T_Ctx.ml  tSubtyping.ml
ECMA-SL/utils/: Arith_Utils.ml  Byte_Utils.ml  Common.ml  Date_Utils.ml  File_Utils.ml  Logging.ml  Parse_Heap.ml  Parsing_Utils.ml  String_Utils.ml  arith_utils.ml  common.ml  err.ml  fmt.ml  font.ml  io.ml  log.ml  parsing_heap_utils.ml  parsing_number_utils.ml  parsing_utils.ml  string_utils.ml  syntax.ml  syntax.mli  utils.ml
JS-Interpreters/: .gitignore  dune  globalHeap.json  globalHeap_strict.json  prog.js  results_rafael.md  test_ecmaref6.t
JS-Interpreters/ES5_interpreter/: ES5_Reference_Interpreter.esl  ESL_Interpreter.esl  main.esl
JS-Interpreters/ES6_interpreter/: ES6_Reference_Interpreter.esl  ESL_Interpreter.esl  main.esl  main2.esl
JS-Interpreters/Heaps/: globalHeap.json  globalHeap2.json  globalHeap_harness_strict.json  globalHeap_strict2.json
JS-Interpreters/NaiveInterpreter1/: Completion.esl  EntryPoint.esl  Interpreter.esl  toy-ecma.cesl
JS-Interpreters/ecmaref5/: empty.esl  esl_interpreter.esl  esl_sections.esl  main.esl
JS-Interpreters/ecmaref6/: README.md  empty.esl  esl_interpreter.esl  esl_sections.esl  main.esl  main_sym.esl
JS-Interpreters/naive-interpreter/: ArrayObject.esl  Completion.esl  EntryPoint.esl  Error.esl  FunctionObject.esl  GlobalObject.esl  InternalFunction.esl  Interpreter.esl  JSTypes.esl  Object.esl  Scope.esl  toy-ecma.cesl
JS-Interpreters/scripts/: autotest.sh  compare.py  exec_es6_single_test.sh  exec_test262_tests.sh  exec_test262_tests_non-optimised.sh  replace.sh  run_es6_single_test.sh  run_test262_tests.sh
JS-Interpreters/toyecma/: Completion.esl  EntryPoint.esl  Error.esl  FunctionObject.esl  GlobalObject.esl  InternalFunction.esl  Interpreter.esl  Object.esl  Scope.esl
JS-Interpreters/types/: makefile  toy-ecam.cesl
src/: dune  share.ml
src/base/: base.ml  cont.ml  dune  font.ml  io.ml  log.ml  string.ml  terminal.ml
src/js2ecma-sl/: dune
src/semantics/: dune
src/symbolic/: choice_monad.ml  memory_intf.ml  object_intf.ml  solver.ml  symbolic.ml  symbolic_error.ml  symbolic_esl_ffi.ml  symbolic_interpreter.ml  symbolic_memory.ml  symbolic_object.ml  symbolic_report.ml  symbolic_value.ml  symbolic_value.mli
src/syntax/: dune
(+21758 files in other folders)
