(include_subdirs unqualified)

(library
 (public_name ecma-sl)
 (name ecma_sl)
 (modules
  ;  general
  config
  ;  utils
  common
  io
  log
  err
  fmt
  font
  counter
  syntax
  arith_utils
  byte_utils
  date_utils
  parsing_utils
  parsing_heap_utils
  parsing_number_utils
  string_utils
  time_utils
  ;   syntax (share)
  val
  loc
  object
  operator
  type
  source
  ;   syntax (core)
  expr
  stmt
  func
  prog
  lexer
  parser
  ;   syntax (extended)
  E_Expr
  E_Stmt
  E_Func
  E_Prog
  E_Type
  E_Operator
  E_Pat
  E_Pat_v
  E_Macro
  E_Store
  E_Lexer
  E_Parser
  ;   error
  Eslerr
  Eslerr_type
  Eslerr_token
  Eslerr_fmt
  ;   semantics (domains)
  store
  heap
  call_stack
  ;   semantics (core)
  interpreter
  eval_operator
  debugger
  verbose
  monitor
  external
  ;   semantics (nsu monitor)
  NSUMonitor
  NSUException
  NSUObject
  NSUStore
  NSUHeap
  NSUCallStack
  NSULabel
  NSUTopLevel
  NSULevel
  NSULevel2
  NSULevel_Dep
  ;   semantics (extended)
  compiler
  E_Func_Metadata
  E_Pat_Metadata
  ; typed
  T_Checker
  T_Expr
  T_Stmt
  T_Op
  T_Ctx
  T_Err
  T_ErrFmt
  T_Typing
  T_Narrowing
  T_Constraint
  T_Pattern
  ;   symbolic
  choice_monad_intf
  choice_monad
  extern_func
  interpreter_functor
  interpreter_functor_intf
  link_env
  object_intf
  memory_intf
  solver
  symbolic
  symbolic_interpreter
  symbolic_object
  symbolic_memory
  symbolic_memory2
  s_object_branch_get
  symbolic_value
  value_intf
  value_reducer
  value_translator
  value_typing)
 (preprocess
  (staged_pps ppx_import ppx_deriving.std))
 (libraries
  str
  encoding
  menhirLib
  yojson
  z3
  bos
  bos.setup
  esl_share))

(subdir
 syntax/core
 (rule
  (target lexer.ml)
  (deps lexer.mll)
  (action
   (chdir
    %{workspace_root}
    (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
 (menhir
  (modules parser)
  (flags --table)))

(subdir
 syntax/extended
 (rule
  (target E_Lexer.ml)
  (deps E_Lexer.mll)
  (action
   (chdir
    %{workspace_root}
    (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
 (menhir
  (modules E_Parser)
  (flags --table --explain)))
