(lang dune 3.2)
(using menhir 2.1)

(name ECMA_SL)

(generate_opam_files true)

(source
 (github j3fsantos/ECMA-SL))

(authors "José Fragoso Santos")

(maintainers "José Fragoso Santos")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ECMA_SL)
 (synopsis "ECMA-SL")
 (description "A Platform for specifying and running the ECMAScript standard.")
 (depends
   (ocaml (>= "5.1.0"))
   (ocamlformat (= "0.26.0"))
   (core (>= "v0.16.0"))
   (core_unix (>= "v0.16.0"))
   dune
   cmdliner
   bos
   batteries
   ppx_import
   ppx_deriving
   ppx_inline_test
   extlib
   menhir
   menhirLib
   encoding
   yojson)
 (tags
  (ECMAScript "Specification Language" "Reference Interpreters" "OCaml")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
