(lang dune 3.2)

(using menhir 2.1)

(using dune_site 0.1)

(name ECMA_SL)

(generate_opam_files true)

(source
 (github j3fsantos/ECMA-SL))

(authors "José Fragoso Santos")

(maintainers "José Fragoso Santos")

(license "GPL-3.0-or-later")

(documentation https://url/to/documentation)

(package
 (name ECMA_SL)
 (synopsis "ECMA-SL")
 (description
  "A platform for specifying and running the ECMAScript standard.")
 (depends
  (ocaml
   (>= "5.1.0"))
  (odoc :with-doc)
  (core
   (>= "v0.16.0"))
  (core_unix
   (>= "v0.16.0"))
  dune
  cmdliner
  bos
  batteries
  ppx_import
  ppx_deriving
  ppx_inline_test
  extlib
  menhir
  menhirLib
  (encoding
   (>= "0.0.1"))
  yojson)
 (tags
  (ECMAScript "Specification Language" "Reference Interpreters" "OCaml")))

(package
 (name es)
 (depends dune-site)
 (sites
  (share interpreters)
  (share nodejs)))
