(rule
 (targets es5.include es6.include es6-sym.include es6-sym.cesl)
 (deps
  %{bin:ecma-sl}
  (source_tree ecmaref5)
  (source_tree ecmaref6))
 (action
  (progn
   (system
    "realpath ../../../JS-Interpreters/ecmaref5/main.esl > es5.include")
   (system
    "realpath ../../../JS-Interpreters/ecmaref6/main.esl > es6.include")
   (system
    "realpath ../../../JS-Interpreters/ecmaref6/main_sym.esl > es6-sym.include")
   (run ecma-sl compile ecmaref6/main_sym.esl --untyped -o es6-sym.cesl))))

(install
 (section
  (site
   (ecma-sl interpreters)))
 (files es5.include es6.include es6-sym.include es6-sym.cesl))
