(include_subdirs unqualified)

(library
 (public_name ecma-sl.semantics)
 (name eslSemantics)
 (modules
  ; error
  error_type
  error_source
  error_trace
  compile_error
  typing_error
  runtime_error
  ; core parsers
  lexer
  parser
  parsing
  parsing_helper
  ; extended parsers
  eLexer
  eParser
  eParsing
  eParsing_helper
  ; concrete interpreter
  interpreter
  eval_op
  external
  instrument
  ; concrete interpreter (domains)
  store
  heap
  call_stack
  ; concrete interpreter (instrumentation)
  tracer
  debugger
  profiler
  monitor
  ; concrete interpreter (instrumentation - debugger)
  debugger_tui
  debugger_tui_helper
  Debugger_tui_code
  Debugger_tui_view
  Debugger_tui_execution
  Debugger_tui_terminal
  Debugger_cmd
  Debugger_types
  ; concrete interpreter (instrumentation - monitors)
  NSUMonitor
  NSUException
  NSUObject
  NSUStore
  NSUHeap
  NSUCallStack
  NSULabel
  NSUTopLevel
  NSULevel
  NSULevel2
  NSULevel_Dep
  ; functorial interpreter
  ;x choice_monad_intf
  ;x choice_monad
  ;x extern_func
  ;x interpreter_functor_intf
  ;x interpreter_functor
  ;x link_env
  ;x memory_intf
  ;x object_intf
  ;x solver
  ;x symbolic_extern
  ;x symbolic_interpreter
  ;x symbolic_memory
  ;x symbolic_object
  ;x symbolic_value
  ;x symbolic
  ;x value_intf
  ;x value_reducer
  ;x value_translator
  ;x value_typing
  ; functorial interpreter (domains)
  ;x symbolic_object2
  ;x symbolic_memory2
  ; compiler
  preprocessor
  compiler
  ; compiler (type system)
  tChecker
  tSubtyping
  tOperator
  tExpr
  tStmt
  tCtx
  ;  utils
  arith_utils
  byte_utils
  date_utils
  parsing_utils
  string_utils)
 (preprocess
  (staged_pps ppx_import ppx_deriving.std))
 (libraries eslBase eslSyntax eslJSParser str menhirLib yojson curses smtml)
 (instrumentation
  (backend bisect_ppx)))
