(install
 (package es)
 (section
  (site (es interpreters)))
 (files
  (interpreters/es6.cesl as es6.cesl)))

(install
 (package es)
 (section
  (site (es nodejs)))
 (files
  (nodejs/esl_symbolic.js as esl_symbolic.js)))

(library
 (public_name es)
 (modules es es_site)
 (libraries dune-site))

(generate_sites_module
 (module es_site)
 (sites es))
