(include_subdirs unqualified)

(library
 (public_name ecma-sl.syntax)
 (name eslSyntax)
 (modules
  ; share
  id
  loc
  type
  source
  object
  operator
  ; core
  expr
  stmt
  func
  prog
  ; extended
  eExpr
  eStmt
  eStmt_metadata
  eFunc
  eFunc_metadata
  eProg
  ePat
  ePat_metadata
  eMacro
  eType)
 (libraries eslBase smtml)
 (instrumentation
  (backend bisect_ppx)))
