(include_subdirs unqualified)

(library
 (public_name ecma-sl.syntax)
 (name eslSyntax)
 (modules
  ; share
  id
  loc
  type
  value
  source
  object
  operator
  ; core
  expr
  stmt
  func
  prog
  ; extended
  eExpr
  eStmt
  eFunc
  eProg
  ePat
  eMacro
  eMetadata
  eType)
 (libraries eslBase smtml)
 (instrumentation
  (backend bisect_ppx)))
