(include_subdirs unqualified)

(library
 (public_name ecma-sl.syntax)
 (name eslSyntax)
 (modules
  ; share
  id
  loc
  type
  value
  source
  object
  operator
  ; core
  prog
  func
  stmt
  expr
  ; extended
  eProg
  eImport
  eFunc
  eMacro
  eStmt
  ePat
  eExpr
  eType)
 (libraries eslBase smtml)
 (instrumentation
  (backend bisect_ppx)))
