(library
 (name typed_ecmasl_tests)
 (modules
  test
  test_Syntax
  test_Basic
  test_FunctionsAndCalls
  test_Operators
  test_Nary
  test_Object
  test_Statements
  )
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_inline_test))
 (libraries ECMA_SL))

(alias
 (name runtest)
 (deps
  (source_tree example)))
