(library
 (name typed_ecmasl_tests)
 (modules
  Test
  TestBasic
  ; TestFunction
  TestLiteral
  TestUnion
  ; TestIfWhile
  ; TestObject
  ; TestConstraint
  TestMatch
  ; TestTypedef
  )
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (libraries ecma-sl))

(alias
 (name runtest)
 (deps
  (source_tree examples)))
